# poetry_flet

./: .gitignore  README.md  pyproject.toml
poetry_flet/: main.py
