[tool.poetry]
name = "poetry-flet"
version = "0.1.0"
description = ""
authors = ["Maksim Semizorov <semimaks@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.21.2"

[tool.poetry.scripts]
flet_start = "poetry_flet.main:ft.app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
